--- a/.gitignore
+++ b/.gitignore
@@ -3,21 +3,21 @@
 *.log
 build
 node_modules
-lib
+# lib
 es
 /release/releaseSecret.js
-/dist/style.css.map
-/dist/onfido.min.js.map
-/dist/index.html
-/dist/images
+# /dist/style.css.map
+# /dist/onfido.min.js.map
+# /dist/index.html
+# /dist/images
 test/tmp
 test/UITestsReport
-/dist/onfido.crossDevice.min.js
-/dist/onfido.crossDevice.min.js.map
-/dist/reports
-/dist/demo.min.js
-/dist/demo.min.js.map
-dist/onfido.crossDevice.css.map
-dist/onfido.crossDevice.css
-dist/previewer*
-dist/*~*
+# /dist/onfido.crossDevice.min.js
+# /dist/onfido.crossDevice.min.js.map
+# /dist/reports
+# /dist/demo.min.js
+# /dist/demo.min.js.map
+# dist/onfido.crossDevice.css.map
+# dist/onfido.crossDevice.css
+# dist/previewer*
+# dist/*~*
